src/util/disk_cache.c
@@ -78,6 +78,10 @@ struct disk_cache {
 
    /* Maximum size of all cached objects (in bytes). */
    uint64_t max_size;
+
+   /* Extra data blob to hash into the cache keys. */
+   void *key_blob;
+   size_t key_blob_size;
 };
 
 struct disk_cache_put_job {
@@ -154,45 +158,8 @@ concatenate_and_mkdir(void *ctx, const char *path, const char *name)
       return NULL;
 }
 
-static int
-remove_dir(const char *fpath, const struct stat *sb,
-           int typeflag, struct FTW *ftwbuf)
-{
-   if (S_ISREG(sb->st_mode))
-      unlink(fpath);
-   else if (S_ISDIR(sb->st_mode))
-      rmdir(fpath);
-
-   return 0;
-}
-
-static void
-remove_old_cache_directories(void *mem_ctx, const char *path,
-                             const char *timestamp)
-{
-   DIR *dir = opendir(path);
-
-   struct dirent* d_entry;
-   while((d_entry = readdir(dir)) != NULL)
-   {
-      char *full_path =
-         ralloc_asprintf(mem_ctx, "%s/%s", path, d_entry->d_name);
-
-      struct stat sb;
-      if (stat(full_path, &sb) == 0 && S_ISDIR(sb.st_mode) &&
-          strcmp(d_entry->d_name, timestamp) != 0 &&
-          strcmp(d_entry->d_name, "..") != 0 &&
-          strcmp(d_entry->d_name, ".") != 0) {
-         nftw(full_path, remove_dir, 20, FTW_DEPTH);
-      }
-   }
-
-   closedir(dir);
-}
-
 static char *
-create_mesa_cache_dir(void *mem_ctx, const char *path, const char *timestamp,
-                      const char *gpu_name)
+create_mesa_cache_dir(void *mem_ctx, const char *path, const char *gpu_name)
 {
    char *new_path = concatenate_and_mkdir(mem_ctx, path, "mesa");
    if (new_path == NULL)
@@ -204,13 +171,6 @@ create_mesa_cache_dir(void *mem_ctx, const char *path, const char *timestamp,
     * by a compatible Mesa version.
     */
    new_path = concatenate_and_mkdir(mem_ctx, new_path, get_arch_bitness_str());
-   if (new_path == NULL)
-      return NULL;
-
-   /* Remove cache directories for old Mesa versions */
-   remove_old_cache_directories(mem_ctx, new_path, timestamp);
-
-   new_path = concatenate_and_mkdir(mem_ctx, new_path, timestamp);
    if (new_path == NULL)
       return NULL;
 
@@ -257,8 +217,7 @@ disk_cache_create(const char *gpu_name, const char *timestamp)
       if (mkdir_if_needed(path) == -1)
          goto fail;
 
-      path = create_mesa_cache_dir(local, path, timestamp,
-                                   gpu_name);
+      path = create_mesa_cache_dir(local, path, gpu_name);
       if (path == NULL)
          goto fail;
    }
@@ -270,8 +229,7 @@ disk_cache_create(const char *gpu_name, const char *timestamp)
          if (mkdir_if_needed(xdg_cache_home) == -1)
             goto fail;
 
-         path = create_mesa_cache_dir(local, xdg_cache_home, timestamp,
-                                      gpu_name);
+         path = create_mesa_cache_dir(local, xdg_cache_home, gpu_name);
          if (path == NULL)
             goto fail;
       }
@@ -307,7 +265,7 @@ disk_cache_create(const char *gpu_name, const char *timestamp)
       if (path == NULL)
          goto fail;
 
-      path = create_mesa_cache_dir(local, path, timestamp, gpu_name);
+      path = create_mesa_cache_dir(local, path, gpu_name);
       if (path == NULL)
          goto fail;
    }
@@ -315,6 +273,12 @@ disk_cache_create(const char *gpu_name, const char *timestamp)
    cache = ralloc(NULL, struct disk_cache);
    if (cache == NULL)
       goto fail;
+
+   cache->key_blob_size = strlen(timestamp);
+   cache->key_blob = ralloc_size(cache, cache->key_blob_size);
+   if (cache->key_blob == NULL)
+      goto fail;
+   memcpy(cache->key_blob, timestamp, cache->key_blob_size);
 
    cache->path = ralloc_strdup(cache, path);
    if (cache->path == NULL)
@@ -1067,7 +1031,12 @@ void
 disk_cache_compute_key(struct disk_cache *cache, const void *data, size_t size,
                        cache_key key)
 {
-   _mesa_sha1_compute(data, size, key);
+   struct mesa_sha1 ctx;
+
+   _mesa_sha1_init(&ctx);
+   _mesa_sha1_update(&ctx, cache->key_blob, cache->key_blob_size);
+   _mesa_sha1_update(&ctx, data, size);
+   _mesa_sha1_final(&ctx, key);
 }
 
 #endif /* ENABLE_SHADER_CACHE */
